# iot_monitor

./: .gitignore  readme.md
monitor_client/: CMakeLists.txt
monitor_client/include/: data_transmit.h  file_upload.h  monitor.h
monitor_client/src/: data_transmit.cpp  file_upload.cpp  main.cpp  monitor.cpp
monitor_receiver/: CMakeLists.txt  main.cpp  recv_video_file.cpp  recv_video_file.hpp
video_service/: video_service.go
video_service/templates/: index.html  play_video.html
